IPO: Stops to work when enabling ASM
CMake will report that the compiler doesnt support IPO, even if it does. I suspect this is related to the CMAKE_TRY_COMPILE_TARGET_TYPE=STATIC_LIBRARY
setting.
Looking at the CMakeCache.txt, the paths to *prefix-*gcc-ar and *prefix-*gcc-ranlib are correctly detected (*prefix-*gcc-nm is missing)
This happens with an arm-none-eabi compiler and CMake 3.9.0rc1 on linux. The compiler requires a linkerscript for executables.
Edited by nolange