Tests/RunCMake/CMP0069/CMP0069-WARN.cmake
@@ -1,4 +1,4 @@
-set(_CMAKE_IPO_LEGACY_BEHAVIOR NO)
+set(_CMAKE_CXX_IPO_LEGACY_BEHAVIOR NO)
 
 add_executable(foo main.cpp)
 set_target_properties(foo PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
